add github link

--- a/index.haml
+++ b/index.haml
@@ -17,7 +17,11 @@
             %a(href='spellbook.html') Spellbook!
           %li Rejoice!
       %dt Who made this sweet sweet app?
-      %dd Matt Hartzler, lover and ninja.  Enjoy!
-
+      %dd Matt Hartzler, lover and ninja.
+      %dt Where can I hack on this?
+      %dd
+        At 
+        %a(href='http://github.com/hartzler/myspellbook') github
+        of course!
 							
 
