added druid class and per level counters for known/memorized

--- a/index.haml
+++ b/index.haml
@@ -14,7 +14,8 @@
             %a(href='http://gears.google.com/') Google Gears
           %li
             Click 
-            %a(href='spellbook.html') Spellbook!
+            %a(href='spellbook.html') Wizard Spellbook!
+            %a(href='druid.html') Druid Spellbook!
           %li Rejoice!
       %dt Who made this sweet sweet app?
       %dd Matt Hartzler, lover and ninja.
