--- a/spellbook.haml
+++ b/spellbook.haml
@@ -11,6 +11,8 @@
         %option main
         %option secondary
         %option scrolls
+      %a(href='spellbook.html') Wizard
+      %a(href='druid.html') Druid
     #controls
       Filter:
       %select(id='view')
