remove mem checkboxes

--- a/level.haml
+++ b/level.haml
@@ -1,5 +1,5 @@
 .level(id="level-#{level}")
-  %a(id="a-level-#{level}")
+  %a(id="a-#{level}")
     %h3== Level #{level}
     .stats      
       Known:
