--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,8 @@
 %html
   %head
-    %link(type='text/css' rel='stylesheet' href='main.css')
+    %link(href="bootstrap-1.0.0.css" rel="stylesheet" type="text/css")
+    %link(type='text/css' rel='stylesheet' href='main.less')
+    %script(src="less.js" type="text/javascript")
   %body
     %h1 MySpellBook 
     %dl
